<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:buttonGravity="center_vertical"
        app:navigationIcon="@drawable/arrow_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/sv_chip_group"
        android:layout_width="389dp"
        android:layout_height="47dp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/rv_order_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/white"
                app:chipSurfaceColor="@color/primary_green" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pending"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:textColor="@color/white"
                app:chipSurfaceColor="@color/primary_green" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_delivered"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivered"
                android:textColor="@color/white"
                app:chipSurfaceColor="@color/primary_green" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cenceled"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Canceled"
                android:textColor="@color/white"
                app:chipSurfaceColor="@color/primary_green" />


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_chip_group" />



</androidx.constraintlayout.widget.ConstraintLayout >